--- a/package.json
+++ b/package.json
@@ -10,10 +10,24 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "autoprefixer": "^9.8.6",
         "axios": "^0.19",
         "cross-env": "^7.0",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
-        "resolve-url-loader": "^3.1.0"
+        "postcss": "^7.0.35",
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.29.0",
+        "sass-loader": "^8.0.2",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
+        "video.js": "^7.10.2",
+        "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "flv.js": "^1.5.0",
+        "laravel-mix-tailwind": "^0.1.1",
+        "videojs-flvjs": "^0.2.0",
+        "videojs-flvjs-es6": "^1.0.1",
+        "vue": "^2.6.12"
     }
 }
