npm install tailwind-plugins

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "sass": "^1.29.0",
         "sass-loader": "^8.0.2",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
+        "tailwindcss-plugins": "^0.3.0",
         "video.js": "^7.10.2",
         "vue-template-compiler": "^2.6.12"
     },
