--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dependencies": {
         "flv.js": "^1.5.0",
         "laravel-mix-tailwind": "^0.1.1",
+        "serverless-pseudo-parameters": "^2.5.0",
         "videojs-flvjs": "^0.2.0",
         "videojs-flvjs-es6": "^1.0.1",
         "vue": "^2.6.12"
